gcc/testsuite/rust/rustc/ui/suggestions/issue-90974_dg.rs
fn main() {
    println!("{}", (3.).recip()); // { dg-error ".E0689." "" { target *-*-* } }
}

